tests/ui/traits/ice-trait-with-default-method-but-no-impl-broken-mir-109869-2.stderr
error[E0308]: mismatched types
  --> $DIR/ice-trait-with-default-method-but-no-impl-broken-mir-109869-2.rs:12:9
   |
LL |     fn default() -> Self {
   |                     ---- expected `(dyn Empty<T> + 'static)` because of return type
LL |         ()
   |         ^^ expected `dyn Empty`, found `()`
   |
   = note: expected trait object `(dyn Empty<T> + 'static)`
                 found unit type `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
